# hand-challenge

./: README.md
python/: .editorconfig  .envrc  README.md  pyproject.toml
python/src/hplang/: __init__.py  __main__.py  instructions.py  memory.py
python/tests/: test_hplang.py
